Additional spacing issues

--- a/styles.css
+++ b/styles.css
@@ -492,7 +492,7 @@ p {
   }
 
   .title-subtext {
-    font-size: 1.5em;
+    font-size: 1.7em;
   }
   .about-image {
     width: 50%;
